--- a/_config.yml
+++ b/_config.yml
@@ -90,6 +90,7 @@ lazyload:
   enable: false
   className: "__lazyload_test__"
 
+
 hide_posts:
   # 可以改成其他你喜欢的名字
   filter: hidden
@@ -105,3 +106,25 @@ symbols_count_time:
   total_symbols: false
   total_time: false
   exclude_codeblock: false
+
+neat_enable: true
+# 压缩html
+neat_html:
+  enable: true
+  exclude:
+# 压缩css  
+neat_css:
+  enable: true
+  exclude:
+    - '**/*.min.css'
+# 压缩js
+neat_js:
+  enable: true
+  mangle: true
+  output:
+  compress:
+  exclude:
+    - '**/*.min.js'
+    - '**/jquery.fancybox.pack.js'
+    - '**/index.js'
+    - '**/back-to-top.js'
