--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "hexo-lazyload": "^1.3.6",
     "hexo-lazyload-image": "^1.0.4",
     "hexo-migrator-wordpress": "^1.0.0",
+    "hexo-neat": "^1.0.4",
     "hexo-related-popular-posts": "^3.0.6",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^0.3.0",
