--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hexo": "^4.0.0",
     "hexo-cli": "^1.1.0",
     "hexo-deployer-git": "^0.3.1",
+    "hexo-deployer-sftp": "^0.4.1",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-feed": "^1.2.2",
