--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,9 @@ jobs:
         node-version: [12.x]
 
     steps:
+    
     - uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -33,8 +35,8 @@ jobs:
     - name: Build
       run: hexo g
 
-    - uses: SamKirkland/FTP-Deploy-Action@3.1.1
     - name: Deploy
+      uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
         ftp-server: sftp://dream.zsh2401.top/web_files
         ftp-username: blogm
