--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,8 @@ jobs:
     steps:
 
     - uses: actions/checkout@v2
-
+      with:
+        fetch-depth: 2
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
@@ -41,3 +42,5 @@ jobs:
         ftp-server: ${{ secrets.SFTP_SERVER }}
         ftp-username: ${{ secrets.SFTP_UNAME }}
         ftp-password: ${{ secrets.SFTP_UPWD }}
+        local-dir: "./public/"
+        git-ftp-args: --insecure
