--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,6 @@ jobs:
         server: dream.zsh2401.top
         port: ${{ secrets.SFTP_PORT }} 
         ssh_private_key: ${{ secrets.SFTP_PK }} 
-        local_path: './public/*'
+        local_path: 'public'
         remote_path: '/home/zsh2401/apps/dnmp/www/blog' #make sure if dir exist
         args: '-o ConnectTimeout=5'
