--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://www.zsh2401.top
+url: https://www.zsh2401.top
 root: /
 permalink: post/:title/
 permalink_defaults:
@@ -130,3 +130,9 @@ neat_js:
     - '**/index.js'
     - '**/back_to_top.js'
     - '**/back_to_top.js'
+
+# 自动生成sitemap
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
