友谊是双向的

--- a/themes/icarus-3.1.0/_config.yml
+++ b/themes/icarus-3.1.0/_config.yml
@@ -215,7 +215,7 @@ widgets:
         links:
             秋之盒: 'https://www.atmb.top'
             xxwhite: 'https://xxwhite.com'
-            web1n: 'https://https.vc'
+            # web1n: 'https://https.vc'
             STAUNCHKAIL: 'https://staunchkai.com/'
     # Recent posts widget configurations
     -
