--- a/themes/icarus-3.1.0/_config.yml
+++ b/themes/icarus-3.1.0/_config.yml
@@ -215,6 +215,7 @@ widgets:
         links:
             秋之盒: 'https://www.atmb.top'
             xxwhite: 'https://xxwhite.com'
+            黄茂昌博客: 'https://www.hmchang.com/'
             # web1n: 'https://https.vc'
             STAUNCHKAIL: 'https://staunchkai.com/'
     # Recent posts widget configurations
