--- a/themes/icarus-3.1.0/_config.yml
+++ b/themes/icarus-3.1.0/_config.yml
@@ -216,8 +216,7 @@ widgets:
             秋之盒: 'https://www.atmb.top'
             xxwhite: 'https://xxwhite.com'
             黄茂昌博客: 'https://www.hmchang.com/'
-            # web1n: 'https://https.vc'
-            STAUNCHKAIL: 'https://staunchkai.com/'
+            CareyQ: 'https://careyq.cool/'
     # Recent posts widget configurations
     -
         # Where should the widget be placed, left sidebar or right sidebar
