--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "hexo s --draft",
     "clean": "hexo clean",
-    "build": "hexo g"
+    "build": "hexo g",
+    "sync":"powershell ./sync.ps1"
   },
   "dependencies": {
     "bulma-stylus": "0.8.0",
