--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-marked": "^3.3.0",
+    "hexo-renderer-pug": "^1.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
     "hexo-symbols-count-time": "^0.7.1",
+    "hexo-theme-butterfly": "^3.5.1",
     "hexo-util": "^2.4.0"
   }
 }
