--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "hpublish": "hexo publish",
     "clean": "hexo clean",
     "build": "hexo g",
-    "sync": "powershell ./sync.ps1"
+    "sync": "powershell ./sync.ps1",
+    "deploy":"ts-node coding_pages.ts"
   },
   "dependencies": {
     "bulma-stylus": "0.8.0",
+    "gh-pages": "^3.1.0",
     "hexo": "^5.3.0",
     "hexo-component-inferno": "0.10.5",
     "hexo-generator-archive": "^1.0.0",
@@ -42,5 +44,8 @@
     "hexo-server": "^2.0.0",
     "hexo-symbols-count-time": "^0.7.1",
     "hexo-util": "^2.4.0"
+  },
+  "devDependencies": {
+    "@types/gh-pages": "^3.0.0"
   }
 }
