--- a/themes/icarus-4.1.1/_config.yml
+++ b/themes/icarus-4.1.1/_config.yml
@@ -102,11 +102,13 @@ navbar:
         主页: /
         归档: /archives
         分区: /categories
-        关于: /about
-        留言板: /messageboard
+        自传: /categories/自传
+        关于与留言: /about
+        # 留言板: /messageboard
+  
     # Links to be shown on the right of the navigation bar
     links:
-        Download on GitHub:
+        My GitHub:
             icon: fab fa-github
             url: 'https://github.com/zsh2401'
 # Page footer configurations
@@ -156,8 +158,8 @@ comment:
     type: valine
     app_id: SgbNrEUzQb2NjWbDT6M2yQ0B-gzGzoHsz        # (required) LeanCloud application id
     app_key: 98EJBKzTnmY2AMjwsHMhOxkA       # (required) LeanCloud application key
-    notify: true           # (optional) receive email notification
-    verify: false           # (optional) show verification code
+    notify: false           # (optional) receive email notification
+    verify: true           # (optional) show verification code
     placeholder: 评论者必须遵守中华人民共和国法律法规，网友发言不代表本站点立场。  
 # Donate plugin configurations
 # https://ppoffice.github.io/hexo-theme-icarus/categories/Plugins/Donation/
@@ -241,7 +243,7 @@ widgets:
         # Author title
         author_title: 2401的晚秋咖啡
         # Author's current location
-        location: Kunming,Yunnan,China
+        location: 中国云南昆明
         # URL or path to the avatar image
         avatar: /images/head.jpg
         # Whether show the rounded avatar image
@@ -249,7 +251,7 @@ widgets:
         # Email address for the Gravatar
         gravatar: 
         # URL or path for the follow button
-        follow_link: 'https://github.com/ppoffice'
+        follow_link: 'https://github.com/zsh2401'
         # Links to be shown on the bottom of the profile widget
         social_links:
             Github:
