--- a/themes/icarus-4.1.1/_config.yml
+++ b/themes/icarus-4.1.1/_config.yml
@@ -104,7 +104,7 @@ navbar:
         标签: /tags
         分区: /categories
         自传: /categories/自传
-        关于/留言: /about
+        关于/留言: /post/pabout
         # 留言板: /messageboard
   
     # Links to be shown on the right of the navigation bar
