--- a/themes/icarus-4.1.1/_config.yml
+++ b/themes/icarus-4.1.1/_config.yml
@@ -410,8 +410,8 @@ plugins:
 # https://ppoffice.github.io/hexo-theme-icarus/Configuration/Theme/speed-up-your-site-with-custom-cdn/
 providers:
     # Name or URL template of the JavaScript and/or stylesheet CDN provider
-    cdn: loli
+    cdn: cdnjs
     # Name or URL template of the webfont CDN provider
-    fontcdn: loli
+    fontcdn: cdnjs
     # Name or URL of the fontawesome icon font CDN provider
-    iconcdn: loli
+    iconcdn: cdnjs
