--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "new": "hexo new draft",
     "clean": "hexo clean",
     "build": "hexo g",
-    "deploy":"node coding_pages.js"
+    "deploy": "node coding_pages.js"
   },
   "dependencies": {
     "bulma-stylus": "0.8.0",
@@ -44,6 +44,7 @@
     "hexo-util": "^2.4.0"
   },
   "devDependencies": {
-    "@types/gh-pages": "^3.0.0"
+    "@types/gh-pages": "^3.0.0",
+    "cross-env": "^7.0.3"
   }
 }
