--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,18 +36,25 @@ jobs:
     - name: Build
       run: yarn hexo g
 
-    - name: Deploy to Static Pages Server
-      run: yarn deploy
+    - name: Deploy to GitHub Pages
+      uses: crazy-max/ghaction-github-pages@v2.2.0
+      with:
+        build_dir: public
       env:
-        FULL_REPO: ${{ secrets.CODING_REPO }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    # - name: Deploy to SFTP
-    #   uses: wlixcc/SFTP-Deploy-Action@v1.0
-    #   with:
-    #     username: zsh2401
-    #     server: dream.zsh2401.top
-    #     port: ${{ secrets.SFTP_PORT }} 
-    #     ssh_private_key: ${{ secrets.SFTP_PK }} 
-    #     local_path: './public/*'
-    #     remote_path: '/home/zsh2401/apps/dnmp/www/blog' #make sure if dir exist
-    #     args: '-o ConnectTimeout=5'
+    # - name: Deploy to Static Pages Server
+    #   run: yarn deploy
+    #   env:
+    #     FULL_REPO: ${{ secrets.CODING_REPO }}
+
+    - name: Deploy to SFTP
+      uses: wlixcc/SFTP-Deploy-Action@v1.0
+      with:
+        username: zsh2401
+        server: dream.zsh2401.top
+        port: ${{ secrets.SFTP_PORT }} 
+        ssh_private_key: ${{ secrets.SFTP_PK }} 
+        local_path: './public/*'
+        remote_path: '/home/zsh2401/apps/dnmp/www/blog' #make sure if dir exist
+        args: '-o ConnectTimeout=5'
