no longer deploy to sftp server

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,13 +48,13 @@ jobs:
     #   env:
     #     FULL_REPO: ${{ secrets.CODING_REPO }}
 
-    - name: Deploy to SFTP
-      uses: wlixcc/SFTP-Deploy-Action@v1.0
-      with:
-        username: zsh2401
-        server: dream.zsh2401.top
-        port: ${{ secrets.SFTP_PORT }} 
-        ssh_private_key: ${{ secrets.SFTP_PK }} 
-        local_path: './public/*'
-        remote_path: '/home/zsh2401/apps/dnmp/www/blog' #make sure if dir exist
-        args: '-o ConnectTimeout=5'
+    # - name: Deploy to SFTP
+    #   uses: wlixcc/SFTP-Deploy-Action@v1.0
+    #   with:
+    #     username: zsh2401
+    #     server: dream.zsh2401.top
+    #     port: ${{ secrets.SFTP_PORT }} 
+    #     ssh_private_key: ${{ secrets.SFTP_PK }} 
+    #     local_path: './public/*'
+    #     remote_path: '/home/zsh2401/apps/dnmp/www/blog' #make sure if dir exist
+    #     args: '-o ConnectTimeout=5'
